# lcd-clock-a-rs

./: .rustfmt.toml  Cargo.toml  build.rs  openocd.gdb  readme.md
.cargo/: config.toml
src/: bell.rs  bme280.rs  ds3231.rs  gl.rs  hardware.rs  images.rs  lcd_clock.rs  led_strip.rs  main.rs  misc.rs  pins.rs  st7789vwx6.rs  state.rs  ws2812.rs
src/drivers/: bme280.rs  buttons.rs  ds3231.rs  mod.rs  st7789vwx6.rs  ws2812.rs
