[package]
name = "lcd-clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2.5"
cortex-m-semihosting = { version = "0.3.3", optional = true }
panic-halt = "0.2.0"
panic-semihosting = { version = "0.6.0", optional = true }
rp-pico = "0.5"
fugit = "0.3.5"
unwrap-infallible = "0.1.5"
nb = "1.0.0"
pio = "0.2.0"

[features]
semihosting = ["panic-semihosting", "cortex-m-semihosting"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"
strip = true

[build-dependencies]
image = "0.24.5"
walkdir = "2.3.2"
